# Report_Generator

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Data/: articles_state.json  current_session.json
Data/Data_articles/: last_update.json
Data/Data_articles/Data_articles1/: _.json  article_1.json  article_100.json  article_1000.json  article_1001.json  article_1002.json  article_1003.json  article_1004.json  article_1005.json  article_1006.json  article_1007.json  article_1008.json  article_1009.json  article_101.json  article_1010.json  article_1011.json  article_1012.json  article_1013.json  article_1014.json  article_1015.json  (+4531 more)
Data/Data_users/: users.json
Informe/: informe.aux  informe.fdb_latexmk  informe.fls  informe.out  informe.tex
initial_analysis/: AED.ipynb
organizador/: generar_csv.py  organizar.py
scraper/: run_scraper.py  scraper.py
scripts/: __init__.py  download_spacy_model.py  run_api.py  setup_nltk.py
src/api/: __init__.py  api.py  simple_api.py
src/data/: __init__.py  loader.py
src/frontend/: app.js  app.ts  index.html  login.html  styles.css  tsconfig.json
src/nlp/: preprocessing.py  regex_annotator.py  regex_patterns.py  test_nlp.ipynb
src/process/: news_recomendation.py  news_update_&_process.py  report_formatter.py
src/recommendation/: __init__.py  matcher.py  report_generator.py  test_recommendation.ipynb  user_profile.py  vectorize_articles.py  vectorizer.py
src/summarization/: finetune_last-v2.pt  summarizer.py  test_sumarization.ipynb
telegram/: extract_data_tg.py
(+16993 files in other folders)
