[project]
name = "report-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "logging>=0.4.9.6",
    "nltk>=3.9.2",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.11",
    "typing>=3.10.0.0",
]
