[project]
name = "report-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "logging>=0.4.9.6",
    "nltk>=3.9.2",
    "pip>=25.3",
    "pytz>=2025.2",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.11",
    "telethon>=1.42.0",
    "typing>=3.10.0.0",
]
